<resources>
    <string name="app_name">Doraemon</string>
    <string name="module_sunflower">Sunflower</string>
    <string name="author">wye</string>

    <string name="tab_text_main_arch">Arch</string>
    <string name="tab_text_main_components">Components</string>
    <string name="tab_text_main_composable">Composable</string>

    <string name="action_open_drawer">Open drawer</string>
    <string name="action_close_drawer">Close drawer</string>

    <string name="nav_item_main_setting">Setting</string>
    <string name="nav_item_main_about">About</string>

    <string name="toast_msg_app_exit">Press back again to exit!</string>
</resources>