<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <group
        android:id="@+id/group_navigation"
        android:checkableBehavior="single">
        <item
            android:id="@+id/arch"
            android:icon="@drawable/vector_ic_bottom_nav_main_arch"
            android:title="@string/tab_text_main_arch"
            tools:checked="true" />
        <item
            android:id="@+id/components"
            android:icon="@drawable/vector_ic_bottom_nav_main_components"
            android:title="@string/tab_text_main_components" />
        <item
            android:id="@+id/composable"
            android:icon="@drawable/vector_ic_bottom_nav_main_composable"
            android:title="@string/tab_text_main_compose" />

    </group>

    <group android:id="@+id/group_info">
        <item
            android:id="@+id/setting"
            android:icon="@drawable/vector_ic_setting"
            android:checked="true"
            android:title="@string/nav_item_main_setting" />

        <item
            android:id="@+id/about"
            android:checked="true"
            android:icon="@drawable/vector_ic_about"
            android:title="@string/nav_item_main_about" />
    </group>
</menu>